# email-triage-env

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate.py
server/: app.py  email_triage_env_environment.py
