[project]
name = "email-triage-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "huggingface-hub>=1.9.1",
    "openai>=2.30.0",
    "openenv-core>=0.2.3",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
server = "server.app:main"
